refs/ps/testcases/A3/Testcases/Error/tc8.c
void main();

void main()
{
    int number;
    string result;
    read number;
    number += 10;
    result = (number % 2 == 0)?"even":"odd";
    print result;
}